Fixed the alignment of checkbox and forgot password

--- a/src/App.css
+++ b/src/App.css
@@ -193,13 +193,22 @@ h1 {
   padding-top: 3px;
 }
 
-.form-group {
-  margin-bottom: 1rem;
+.form-group {  align-items: center;
+  border-bottom-left-radius: var(--loginBorderRadius);
+  border-bottom-right-radius: var(--loginBorderRadius);
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 20px;
 }
+
+
+
+
 
 input[type=checkbox], input[type=radio] {
   box-sizing: border-box;
   padding: 0;
+  margin: 0;
 }
 
 .wrap-login100-form-btn {
